# lpvc-vfw

./: CMakeLists.txt
src/: dib_iterator.h  drvproc.cpp  mingw.def  resource.h  resource.rc
